--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@upstash/ratelimit": "^1.1.2",
+    "@upstash/redis": "^1.30.0",
+    "@vercel/analytics": "^1.2.2",
     "ai": "^3.0.24",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
